# mlir_rust_stuff

./: Cargo.toml  README.md  rust-toolchain
src/: lib.rs  parse.rs
tests/: test.rs
