[package]
name = "mlir_rust_stuff"
version = "0.0.0"
authors = ["mlevental <maksim.levental@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "printing", "extra-traits"] }
rustc_ast = { path = "rust/compiler/rustc_ast" }
rustc_span = { path = "rust/compiler/rustc_span" }
